# codex-browser-bridge

./: .gitattributes  .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  codecov.yml  deny.toml  go.mod  test_cdp.txt  test_input.txt
.agents/skills/codex-browser/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  supply-chain.yml
benches/: protocol.rs
cmd/bridge/: main.go
cmd/test/: main.go
docs/: release-process.md
docs/analysis/: risk-assessment.md
docs/archives/: README.md
docs/archives/codex-browser-bridge-continuous-hardening/analysis/: module-inventory.md  project-overview.md  risk-assessment.md
docs/archives/codex-browser-bridge-continuous-hardening/governance/: AGENTS.md  instruction-surfaces.md  memory-surface.md
docs/plan/: dependency-graph.md  milestones.md
docs/progress/: MASTER.md
docs/rust-rewrite/: design.md  npm-ci-plan.md  subagent-plan.md
examples/: README.md  hermes-agent.json
internal/client/: browser.go  browser_rpc_test.go  browser_test.go  client.go  e2e_test.go  pipe_windows.go  rpc_test.go
internal/discovery/: discovery.go  discovery_test.go
internal/mcp/: e2e_test.go  handlers_test.go  server.go  server_test.go
internal/protocol/: protocol.go  protocol_test.go
npm/: package.json
npm/scripts/: check-package.js  clean-package.js  install.js  install.test.js  prepare-package.js
scripts/: check-actions-pinned.js  check-agent-surface.js  check-release-contract.js  live-e2e.ps1  test-live-e2e-timeout.ps1
skills/codex-browser/: SKILL.md
src/: browser.rs  cli.rs  client.rs  config.rs  discovery.rs  doctor.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  pipe.rs  protocol.rs  security.rs
src/mcp/: handlers.rs  mod.rs  profiles.rs  schema.rs  types.rs
tests/: browser_api.rs  cdp_tools_e2e.rs  client_rpc.rs  discovery_parity.rs  mcp_parity.rs  protocol_parity.rs
(+15 files in other folders)
